Home page nearly complete, form successfully restricts input and changes state accordingly, might still break if query too large. Need to fix Histogram binning

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -31,6 +31,31 @@
     margin-top: 0.1em;
     margin-bottom: 0.2em
   }
+
+  .content-box.form {
+    margin: 0.3em;
+    background-color: #fafafa;
+    text-align: center;
+    font-size: 0.9em;
+  }
+
+  .date {
+    margin: auto;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+  }
+
+  .mag {
+    margin: auto;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+  }
+
+  button {
+    margin: auto;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+  }
   
   .content-box.body {
     font-size: 0.8em;
@@ -88,4 +113,14 @@
     padding-left: 0.8em;
     padding-right: 0.8em;
     font-size: 0.9em;
+  }
+
+  .header {
+    text-align: center;
+    font-size: 0.8em;
+    margin: 0.01em;
+  }
+
+  .header > * {
+    margin: 0
   }
